<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.DenunciaActivity">

    <!-- Header Section -->
    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="@dimen/header_image_size"
        android:layout_height="@dimen/header_image_size"
        android:layout_marginTop="@dimen/margin_large"
        android:contentDescription="@string/report_icon_description"
        android:src="@drawable/reporte_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.App.Heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/new_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_header" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/TextAppearance.App.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/report_details_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <!-- Form Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_normal"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle">

        <ScrollView
            android:id="@+id/scroll_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_normal">

                <!-- Location Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_location"
                        style="@style/Widget.App.TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/location"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_location">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_location"
                            style="@style/Widget.App.TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:longClickable="false"
                            android:maxLength="200" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_location"
                        style="@style/Widget.App.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:contentDescription="@string/get_current_location"
                        app:icon="@drawable/ic_location" />
                </LinearLayout>

                <!-- Report Type Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_normal">

                    <Spinner
                        android:id="@+id/spinner_report_type"
                        style="@style/Widget.App.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_description"
                        style="@style/TextAppearance.App.Body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/select_report_type" />
                </LinearLayout>

                <!-- Multimedia Section -->
                <TextView
                    android:id="@+id/tv_multimedia_title"
                    style="@style/TextAppearance.App.SectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/multimedia_evidence" />

                <LinearLayout
                    android:id="@+id/layout_media_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_select_image"
                        style="@style/Widget.App.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:layout_weight="1"
                        android:text="@string/gallery"
                        app:icon="@drawable/ic_gallery" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_camera"
                        style="@style/Widget.App.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height"
                        android:layout_weight="1"
                        android:text="@string/camera"
                        app:icon="@drawable/ic_camera" />
                </LinearLayout>

                <!-- Image Preview -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_preview_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/preview_image_height"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    app:cardElevation="@dimen/card_elevation_small">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_preview_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/preview_image_description"
                            android:scaleType="centerCrop" />

                        <ImageButton
                            android:id="@+id/btn_remove_image"
                            style="@style/Widget.App.ImageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|end"
                            android:layout_margin="@dimen/margin_small"
                            android:contentDescription="@string/remove_image"
                            android:src="@drawable/ic_close" />
                    </FrameLayout>
                </androidx.cardview.widget.CardView>

                <!-- Submit Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit_report"
                    style="@style/Widget.App.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/send_report" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>