<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <!-- Botón para registrar denuncia -->
    <Button
        android:id="@+id/btnRegUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:textColor="@color/button_text_color"
        android:backgroundTint="@color/button_background_color"
        android:maxWidth="320dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Botón para ver denuncias -->
    <Button
        android:id="@+id/btnRegReporte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_report"
        app:layout_constraintTop_toBottomOf="@id/btnRegUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Botón para ver mapa de denuncias -->
    <Button
        android:id="@+id/btnMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_map"
        app:layout_constraintTop_toBottomOf="@id/btnRegReporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>